[project]
name = "bpay"
version = "0.1.0"
description = "Unified Python SDK for Bangladeshi payment gateways"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=2.1.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bpay"]
