[project]
name = "bpay"
version = "0.1.0"
description = "Unified Python SDK for Bangladeshi payment gateways"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Ayon" }
]

dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

keywords = [
    "bkash",
    "nagad",
    "sslcommerz",
    "payments",
    "bangladesh",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/thatsayon/bpay-python"
Repository = "https://github.com/thatsayon/bpay-python"
Issues = "https://github.com/thatsayon/bpay-python/issues"

[dependency-groups]
dev = [
    "build>=1.5.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "pytest-asyncio>=1.3.0",
    "twine>=6.2.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bpay"]
